--- a/src/components/search-result/earchResult.scss
+++ b/src/components/search-result/earchResult.scss
@@ -5,6 +5,10 @@
   width: 100%;
 }
 
+.yt-card-img {
+  height: 100%;
+}
+
 .yt-search-content-main {
   &:hover {
     .yt-card-img {
@@ -14,9 +18,9 @@
 }
 
 .yt-card {
-  background: rgba( 255, 255, 255, 0.25 );
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-  backdrop-filter: blur( 4px );
+  background: rgba(113, 113, 113, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(70, 71, 76, 0.40);
+  backdrop-filter: blur(4px);
   border-radius: 10px;
 }
 
