--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: rgba(33, 33, 33, 1);
 }
 
 code {
