--- a/src/components/input-search/inputSearch.scss
+++ b/src/components/input-search/inputSearch.scss
@@ -23,8 +23,7 @@
   }
 
   &::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: rgb(105, 172, 250);
-    opacity: 1; /* Firefox */
+    color: rgba(206, 230, 253, 0.9);
   }
 
 }
