--- a/src/App.scss
+++ b/src/App.scss
@@ -27,12 +27,12 @@
   top: 0;
   z-index: 7000;
   width: 100%;
-  background: rgba( 255, 255, 255, 0.05 );
+  background: rgba(255, 255, 255, 0.05);
   box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.05);
-  backdrop-filter: blur( 4px );
+  backdrop-filter: blur(4px);
   border-radius: 10px;
   height: 85px;
-  border: 1px solid rgba(255, 255, 255, 0.1 );
+  border-bottom: 1px solid rgba(150, 150, 150, 0.5);
 }
 
 
