--- a/src/components/search-result/earchResult.scss
+++ b/src/components/search-result/earchResult.scss
@@ -40,10 +40,18 @@
   position: relative;
   display: inline-block;
   word-wrap: break-word;
-  overflow: hidden;
-  max-height: 3.6em; /* (Number of lines you want visible) * (line-height) */
+  max-height: 3.5em;
   line-height: 1.2em;
-  text-align:justify;
+  text-align: justify;
+
+  height: 34px;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-clamp: 2;
+  box-orient: vertical;
+  white-space: normal;
 }
 
 .yt-card-text .yt-card-ellipsis::after {
